syntax = "proto3";

package userservice;

service UserService {
  rpc GetUser (UserId) returns (User);
  rpc CreateUser (User) returns (stream User);
}

message UserId {
  int32 id = 1;
}

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
}
